@@ -23,3 +23,4 @@ next version - not released yet
 ! Ticket #5464, If the main window was minimized while the D3D fullscreen window was displayed on another screen,
   it was impossible to use the mouse buttons to play, pause, exit fullscreen, etc.
 ! Ticket #5472, Make it easier to input value to the "Audio time shift" field in options
+! Ticket #5496, Subtitle downloader dialog: the preferred languages were sometimes not displayed first
